(fix) [SD-3589] Layout issue when "master desk" section is open simultaneously with authoring

--- a/client/app/scripts/superdesk-desks/styles/desks.less
+++ b/client/app/scripts/superdesk-desks/styles/desks.less
@@ -103,6 +103,7 @@
 
 	.desk-container {
 		flex: 0 0 20%;
+		min-width: 250px;
 		.border-box();
 		position: relative;
 	}
@@ -252,6 +253,9 @@
 			line-height: 30px;
 			margin-right: 10px;
 		}
+		time {
+			color:#999;
+		}
 		.text {
 			height: 32px;
 			overflow: hidden;
@@ -260,7 +264,8 @@
 			font-size: 12px;
 			padding-right: 10px;
 			.keywords {
-				  color: #216278;
+				  color: @sd-keyword;
+				  font-weight: 500;
 				  text-transform: uppercase;
 				  margin-right: 5px;
 			}
